fix: [OBI-267] drag and drop zone z-index behind scroll to bottom button

--- a/src/components/dragAndDropArea/dragAndDropArea.styles.scss
+++ b/src/components/dragAndDropArea/dragAndDropArea.styles.scss
@@ -4,7 +4,7 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	z-index: 2;
+	z-index: 4;
 	background-color: rgba(255, 255, 255, 0.9);
 	opacity: 0;
 	transition: opacity 0.3s ease;
@@ -62,7 +62,7 @@
 }
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-	.DragAndDropArea {
+	.dragAndDropArea {
 		-webkit-backdrop-filter: blur(5px);
 		backdrop-filter: blur(5px);
 		background-color: rgba(255, 255, 255, 0.5);
